kubernetes-networks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
  namespace: homework
  annotations:   
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: "homework.otus"
    http:
      paths:
      - path: /homework($|/)(.*)
        pathType: Prefix
        backend:
          service:
            name: web
            port:
              number: 8000
      - path: /()(.*)
        pathType: Prefix
        backend:
          service:
            name: web
            port:
              number: 8000
